<resources>
    <string name="app_name">PAP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Pen_and_Papers">Pen And Papers</string>
    <string name="neues_spiel">Neues Spiel</string>
    <string name="spiel_laden">Spiel Laden</string>
    <string name="game_options">   Optionen   </string>
    <string name="save_game">Speicher Spiel</string>
    <string name="game_name"> Name </string>
    <string name="player_name">Name</string>
    <string name="player_beruf">Beruf</string>
    <string name="plus">+</string>
    <string name="player_alter">Alter</string>
    <string name="player_geschlecht">Geschlecht</string>
    <string name="player_körpergröße">Körpergröße</string>
    <string name="player_gewicht">Gewicht</string>
    <string name="player_schuhgröße">Schuhgröße</string>
    <string name="man">m</string>
    <string name="woman">w</string>
    <string name="stats_körperkraft">Körperkraft</string>
    <string name="stats_ausdauer">Ausdauer</string>
    <string name="stats_geschwidigkeit">Schnelligkeit</string> <!-- Geschwindigkeit -->
    <string name="stats_intelligenz">Intelligenz</string>
    <string name="stats_charme">Charme</string>
    <string name="stats_geistige_gesundheit">Gesundheit</string>  <!-- geistige Gesundheit -->
    <string name="stats_lebensenergie">Leben</string> <!-- Lebensenergie -->
    <string name="stats_mentale_belastbarkeit">Belastbarkeit</string> <!-- metale Belastbarkeit -->
    <string name="stats_nahkampf">Nahkampf</string>
    <string name="stats_distanz">Distanz</string>
    <string name="stats_parade">Parade</string>
    <string name="stats_initiative">Initiative</string>
    <string name="random">Random</string>
    <string name="weiter">Weiter</string>
    <string name="würfel">Würfel</string>
    <string name="player_stats">Spieler Eigenschaften</string>
    <string name="player_inventory">Spieler Inventar</string>
</resources>
