<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".GameOverView">

    <Button
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:text="@string/würfel"
        android:id="@+id/BWuerfel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <Button
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:text="@string/player_stats"
        android:id="@+id/BPlayerStats"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp" />

    <Button
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:text="@string/player_inventory"
        android:id="@+id/BPlayerInventory"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp" />

</RelativeLayout>