<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PAPActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Pen_and_Papers"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        style="@style/AppTheme" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/neues_spiel"
        android:id="@+id/BNeuesSpiel"
        android:layout_marginTop="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="98dp"
        android:layout_marginRight="98dp"
        android:layout_marginBottom="98dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/spiel_laden"
        android:id="@+id/BSpielLaden"
        android:layout_marginTop="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:layout_marginRight="98dp"
        android:layout_marginLeft="98dp" />
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/game_options"
        android:id="@+id/BOptions"
        android:layout_marginTop="320dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:layout_marginRight="98dp"
        android:layout_marginLeft="98dp" />

</RelativeLayout>
