<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PlayerStats">
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/BAddPlayer"
            android:text="@string/plus"
            android:textColor="#ffffffff"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="5dp"
            android:background = "@drawable/rounded_button"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player_name"
            android:id="@+id/TVPlayerName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/EDPlayerName"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player_beruf"
            android:id="@+id/TVBeruf"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/EDBeruf"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="70dp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player_alter"
            android:id="@+id/TVAlter"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="160dp" />

        <EditText
            android:layout_width="60p"
            android:layout_height="60dp"
            android:id="@+id/EDAlter"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="130dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Körpergröße"
            android:id="@+id/TVKörpergröße"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="160dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/EDKörpergröße"
            android:layout_marginLeft="278dp"
            android:layout_marginTop="130dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player_geschlecht"
            android:id="@+id/TVGesclecht"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="220dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m"
            android:id="@+id/CBMan"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="215dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="w"
            android:id="@+id/CBWoman"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="215dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="r1"
            android:id="@+id/r1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="280dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/EDr1"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="250dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="r1"
            android:id="@+id/r2"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="280dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/EDr2"
            android:layout_marginLeft="278dp"
            android:layout_marginTop="250dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="r3"
            android:id="@+id/r3"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="340dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/EDr3"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="310dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="r4"
            android:id="@+id/r4"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="340dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/EDr4"
            android:layout_marginLeft="278dp"
            android:layout_marginTop="310dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="r3"
            android:id="@+id/r5"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="400dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/EDr5"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="370dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="r4"
            android:id="@+id/r6"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="400dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/EDr6"
            android:layout_marginLeft="278dp"
            android:layout_marginTop="370dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="r3"
            android:id="@+id/r7"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="460dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/EDr7"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="430dp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="r4"
            android:id="@+id/r8"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="460dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/EDr8"
            android:layout_marginLeft="278dp"
            android:layout_marginTop="430dp" />
    </RelativeLayout>
 </ScrollView>